trunk/src/org/openiaml/iacleaner/ast/php/PhpPage.java
/* Generated By:JJTree&JavaCC: Do not edit this line. PhpPage.java */
package org.openiaml.iacleaner.ast.php;

import java.util.*;
import java.io.*;

/** A grammar for web applications, maybe? */
public class PhpPage/*@bgen(jjtree)*/implements PhpPageTreeConstants, PhpPageConstants {/*@bgen(jjtree)*/
  protected static JJTPhpPageState jjtree = new JJTPhpPageState();
  public static PhpPage instance = null;

  /**
   * For loading test cases programatically.
   */
  public static SimpleNode loadFile(File f, int initialState) throws ParseException, FileNotFoundException {
        FileInputStream fis = new FileInputStream(f);
        if (instance == null) {
                instance = new PhpPage(fis);
        } else {
                ReInit(fis);
        }
        PhpPageTokenManager.SwitchTo(initialState);
        SimpleNode n = Start();
        return n;
  }

  /**
   * For loading test cases programatically.
   * Works out the initial state based on the file extension of the given
   * file.
   */
  public static SimpleNode loadFile(File f) throws ParseException, FileNotFoundException {
          String extension = f.getAbsolutePath().substring(f.getAbsolutePath().lastIndexOf("."));

          int initialState = 0;
          throw new RuntimeException("Unknown file type: " + extension + " (from file: " + f + ")");

          //return loadFile(f, initialState);
  }

  /**
   * Loading string sources.
   * 
   * @throws UnsupportedEncodingException if we have a problem with the charset encoding 
   */
  public static SimpleNode loadString(String s, String charset, int initialState) throws ParseException, FileNotFoundException, UnsupportedEncodingException {
          InputStream fis = new ByteArrayInputStream(s.getBytes(charset));
        if (instance == null) {
                instance = new PhpPage(fis);
        } else {
                ReInit(fis);
        }
        PhpPageTokenManager.SwitchTo(initialState);
        SimpleNode n = Start();
        return n;
  }

  /** Loads string sources with a default state of HTML. */
  public static SimpleNode loadString(String s, String charset) throws ParseException, FileNotFoundException, UnsupportedEncodingException {
        return loadString(s, charset, DEFAULT);
  }

/** Main production. */
  static final public SimpleNode Start() throws ParseException {
                      /*@bgen(jjtree) Start */
                       ASTStart jjtn000 = new ASTStart(JJTSTART);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);SimpleNode n;
    try {
      Block();
                  n = jjtn000;
      jj_consume_token(0);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return n;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Block() throws ParseException {
                /*@bgen(jjtree) Block */
  ASTBlock jjtn000 = new ASTBlock(JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        PhpRootBlock();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PHP_BLOCK_BEGIN:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void PhpRootBlock() throws ParseException {
                       /*@bgen(jjtree) PhpRootBlock */
  ASTPhpRootBlock jjtn000 = new ASTPhpRootBlock(JJTPHPROOTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PHP_BLOCK_BEGIN);
      PhpBlock();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void PhpBlock() throws ParseException {
                   /*@bgen(jjtree) PhpBlock */
  ASTPhpBlock jjtn000 = new ASTPhpBlock(JJTPHPBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ECHO_STATEMENT:
        case FUNCTION_STATEMENT:
        case RETURN_STATEMENT:
        case GLOBAL_STATEMENT:
        case CLASS_STATEMENT:
        case INTERFACE_STATEMENT:
        case ACCESS_MODIFIER:
        case PHP_TRY_STATEMENT:
        case PHP_THROW_STATEMENT:
        case PHP_DIE_STATEMENT:
        case PHP_IF_STATEMENT:
        case PHP_FUNCTION_NAME:
        case PHP_VARIABLE:
        case PHP_BLOCK_END:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ECHO_STATEMENT:
        case FUNCTION_STATEMENT:
        case RETURN_STATEMENT:
        case GLOBAL_STATEMENT:
        case CLASS_STATEMENT:
        case INTERFACE_STATEMENT:
        case ACCESS_MODIFIER:
        case PHP_TRY_STATEMENT:
        case PHP_THROW_STATEMENT:
        case PHP_DIE_STATEMENT:
        case PHP_IF_STATEMENT:
        case PHP_FUNCTION_NAME:
        case PHP_VARIABLE:
          PhpStatement();
          break;
        case PHP_BLOCK_END:
          PhpInlineHtmlBlock();
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** 
 * this is different to a normal HtmlBlock because these are actually in
 * function structures, e.g. if (true) { [html] }
 */
  static final public void PhpInlineHtmlBlock() throws ParseException {
                             /*@bgen(jjtree) PhpInlineHtmlBlock */
  ASTPhpInlineHtmlBlock jjtn000 = new ASTPhpInlineHtmlBlock(JJTPHPINLINEHTMLBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PHP_BLOCK_END);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PHP_BLOCK_BEGIN:
        jj_consume_token(PHP_BLOCK_BEGIN);
        break;
      case 0:
        jj_consume_token(0);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void PhpStatement() throws ParseException {
                       /*@bgen(jjtree) PhpStatement */
  ASTPhpStatement jjtn000 = new ASTPhpStatement(JJTPHPSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNCTION_STATEMENT:
        PhpFunctionDefinition();
        break;
      case ECHO_STATEMENT:
      case RETURN_STATEMENT:
      case GLOBAL_STATEMENT:
      case PHP_THROW_STATEMENT:
      case PHP_DIE_STATEMENT:
      case PHP_FUNCTION_NAME:
      case PHP_VARIABLE:
        PhpLanguageStatement();
        jj_consume_token(43);
        break;
      case PHP_IF_STATEMENT:
        PhpIfStatement();
        break;
      case CLASS_STATEMENT:
      case INTERFACE_STATEMENT:
      case ACCESS_MODIFIER:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ACCESS_MODIFIER:
          jj_consume_token(ACCESS_MODIFIER);
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS_STATEMENT:
          PhpClassDefinition();
          break;
        case INTERFACE_STATEMENT:
          PhpInterfaceDefinition();
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case PHP_TRY_STATEMENT:
        PhpTryCatchBlock();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void PhpLanguageStatement() throws ParseException {
                               /*@bgen(jjtree) PhpLanguageStatement */
  ASTPhpLanguageStatement jjtn000 = new ASTPhpLanguageStatement(JJTPHPLANGUAGESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ECHO_STATEMENT:
        jj_consume_token(ECHO_STATEMENT);
        PhpValuePossiblyWrapped();
        break;
      case PHP_THROW_STATEMENT:
        jj_consume_token(PHP_THROW_STATEMENT);
        PhpValue();
        break;
      case PHP_DIE_STATEMENT:
        jj_consume_token(PHP_DIE_STATEMENT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW_STATEMENT:
        case STRING:
        case STRING_SQ:
        case DECIMAL:
        case HEXADECIMAL:
        case PHP_BUILTIN:
        case PHP_FUNCTION_NAME:
        case PHP_VARIABLE:
        case PHP_PREFIX_OPERATOR:
        case 44:
          PhpValuePossiblyWrapped();
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
        break;
      case PHP_FUNCTION_NAME:
        PhpFunctionCall();
        jj_consume_token(44);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW_STATEMENT:
        case STRING:
        case STRING_SQ:
        case DECIMAL:
        case HEXADECIMAL:
        case PHP_BUILTIN:
        case PHP_FUNCTION_NAME:
        case PHP_VARIABLE:
        case PHP_PREFIX_OPERATOR:
        case 44:
          PhpArgumentList();
          break;
        default:
          jj_la1[8] = jj_gen;
          ;
        }
        jj_consume_token(45);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR_STATEMENT:
          PhpOrSomething();
          break;
        default:
          jj_la1[9] = jj_gen;
          ;
        }
        break;
      case RETURN_STATEMENT:
        jj_consume_token(RETURN_STATEMENT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW_STATEMENT:
        case STRING:
        case STRING_SQ:
        case DECIMAL:
        case HEXADECIMAL:
        case PHP_BUILTIN:
        case PHP_FUNCTION_NAME:
        case PHP_VARIABLE:
        case PHP_PREFIX_OPERATOR:
        case 44:
          PhpValuePossiblyWrapped();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case OR_STATEMENT:
            PhpOrSomething();
            break;
          default:
            jj_la1[10] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[11] = jj_gen;
          ;
        }
        break;
      case GLOBAL_STATEMENT:
        jj_consume_token(GLOBAL_STATEMENT);
        PhpVariableList();
        break;
      case PHP_VARIABLE:
        PhpVariableAssignment();
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void PhpVariableAssignment() throws ParseException {
                                /*@bgen(jjtree) PhpVariableAssignment */
  ASTPhpVariableAssignment jjtn000 = new ASTPhpVariableAssignment(JJTPHPVARIABLEASSIGNMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PHP_VARIABLE);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PHP_OBJECT_OPERATOR:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_3;
        }
        jj_consume_token(PHP_OBJECT_OPERATOR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PHP_VARIABLE:
          jj_consume_token(PHP_VARIABLE);
          break;
        case PHP_FUNCTION_NAME:
          jj_consume_token(PHP_FUNCTION_NAME);
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        PhpSelectArray();
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(46);
      PhpValuePossiblyWrapped();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR_STATEMENT:
        PhpOrSomething();
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void PhpFunctionCall() throws ParseException {
                          /*@bgen(jjtree) PhpFunctionCall */
  ASTPhpFunctionCall jjtn000 = new ASTPhpFunctionCall(JJTPHPFUNCTIONCALL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PHP_FUNCTION_NAME);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PHP_OBJECT_OPERATOR:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_4;
        }
        jj_consume_token(PHP_OBJECT_OPERATOR);
        jj_consume_token(PHP_FUNCTION_NAME);
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void PhpOrSomething() throws ParseException {
                         /*@bgen(jjtree) PhpOrSomething */
  ASTPhpOrSomething jjtn000 = new ASTPhpOrSomething(JJTPHPORSOMETHING);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OR_STATEMENT);
      jj_consume_token(PHP_FUNCTION_NAME);
      jj_consume_token(44);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEW_STATEMENT:
      case STRING:
      case STRING_SQ:
      case DECIMAL:
      case HEXADECIMAL:
      case PHP_BUILTIN:
      case PHP_FUNCTION_NAME:
      case PHP_VARIABLE:
      case PHP_PREFIX_OPERATOR:
      case 44:
        PhpArgumentList();
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      jj_consume_token(45);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void PhpTryCatchBlock() throws ParseException {
                           /*@bgen(jjtree) PhpTryCatchBlock */
  ASTPhpTryCatchBlock jjtn000 = new ASTPhpTryCatchBlock(JJTPHPTRYCATCHBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PHP_TRY_STATEMENT);
      jj_consume_token(47);
      PhpBlock();
      jj_consume_token(48);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PHP_CATCH_STATEMENT:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_5;
        }
        jj_consume_token(PHP_CATCH_STATEMENT);
        jj_consume_token(44);
        jj_consume_token(PHP_FUNCTION_NAME);
        jj_consume_token(PHP_VARIABLE);
        jj_consume_token(45);
        jj_consume_token(47);
        PhpBlock();
        jj_consume_token(48);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PHP_FINALLY_STATEMENT:
        jj_consume_token(PHP_FINALLY_STATEMENT);
        jj_consume_token(47);
        PhpBlock();
        jj_consume_token(48);
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void PhpValue() throws ParseException {
                   /*@bgen(jjtree) PhpValue */
  ASTPhpValue jjtn000 = new ASTPhpValue(JJTPHPVALUE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PHP_PREFIX_OPERATOR:
          ;
          break;
        default:
          jj_la1[21] = jj_gen;
          break label_6;
        }
        jj_consume_token(PHP_PREFIX_OPERATOR);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PHP_FUNCTION_NAME:
        jj_consume_token(PHP_FUNCTION_NAME);
        jj_consume_token(44);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW_STATEMENT:
        case STRING:
        case STRING_SQ:
        case DECIMAL:
        case HEXADECIMAL:
        case PHP_BUILTIN:
        case PHP_FUNCTION_NAME:
        case PHP_VARIABLE:
        case PHP_PREFIX_OPERATOR:
        case 44:
          PhpArgumentList();
          break;
        default:
          jj_la1[22] = jj_gen;
          ;
        }
